[gd_scene load_steps=5 format=2]

[ext_resource path="res://textures/player/bullet.png" type="Texture" id=1]
[ext_resource path="res://scripts/game/player/bullet.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 30.0

[sub_resource type="CircleShape2D" id=2]
radius = 400.0

[node name="Bullet" type="KinematicBody2D"]
modulate = Color( 2, 2, 2, 1 )
scale = Vector2( 0.1, 0.1 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Particle" type="CPUParticles2D" parent="."]
emitting = false
amount = 30
lifetime = 2.0
one_shot = true
speed_scale = 3.0
explosiveness = 0.8
lifetime_randomness = 1.0
local_coords = false
emission_shape = 2
emission_rect_extents = Vector2( 20, 20 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 800.0
initial_velocity_random = 0.8
angular_velocity = 25.0
angular_velocity_random = 1.0
radial_accel = 20.0
radial_accel_random = 0.5
damping = 80.0
scale_amount = 2.0
scale_amount_random = 0.7

[node name="TimerDeath" type="Timer" parent="."]

[node name="Area" type="Area2D" parent="."]

[node name="Collision" type="CollisionShape2D" parent="Area"]
shape = SubResource( 2 )

[connection signal="timeout" from="TimerDeath" to="." method="_on_TimerDeath_timeout"]
[connection signal="body_entered" from="Area" to="." method="_on_Area2D_body_entered"]
